<resources>
    <string name="app_name">S5DPAFragmentsRecyclerView</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_principal">Principal</string>
    <string name="title_register">Registro</string>
    <string name="title_music">Música</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valtvtitulo">Fragmentos en Android</string>
    <string name="valetfullname">Enter your Full Name</string>
    <string name="valhelpertext">Required</string>
    <string name="valtextemail">Enter your email</string>
    <string name="valrbtmale">Male</string>
    <string name="valrbtfemale">Female</string>
    <string name="valrbtothers">Others</string>
    <string name="valchklicense">License</string>
    <string name="valchkcar">Car?</string>
    <string name="valbtnsave">Save</string>

    <string-array name="country_array">
        <item>Perú</item>
        <item>Venezuela</item>
        <item>Colombia</item>
        <item>Chile</item>
        <item>Ecuador</item>
        <item>Brasil</item>
        <item>Uruguay</item>
    </string-array>
</resources>